Fix file encoding and configuration

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body class="bg-gradient-to-br from-indigo-50 via-white to-purple-50">
-    <!-- Navigation (same as main site) -->
+    <!-- Navigation -->
     <nav class="bg-white/95 backdrop-blur fixed w-full z-50 shadow-sm">
         <div class="max-w-7xl mx-auto px-4 py-3">
             <div class="flex justify-between items-center">
