--- a/clean.html
+++ b/clean.html
@@ -84,7 +84,7 @@
                                 <a href="mailto:hello@clara.ai" class="text-indigo-600 hover:underline">hello@clara.ai</a>
                             </div>
                             <div>
-                                <p class="text-gray-600">Sales & Partnerships</p>
+                                <p class="text-gray-600">Sales &amp; Partnerships</p>
                                 <a href="mailto:sales@clara.ai" class="text-indigo-600 hover:underline">sales@clara.ai</a>
                             </div>
                             <div>
