--- a/press.html
+++ b/press.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Press & News - Clara AI</title>
+    <title>Press &amp; News - Clara AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -39,7 +39,7 @@
     <!-- Hero -->
     <section class="pt-24 pb-12 px-4">
         <div class="max-w-4xl mx-auto">
-            <h1 class="text-5xl font-bold mb-6 gradient-text">Press & News</h1>
+            <h1 class="text-5xl font-bold mb-6 gradient-text">Press &amp; News</h1>
             <p class="text-xl text-gray-700">Latest updates and coverage of Clara AI's mission to transform healthcare.</p>
         </div>
     </section>
