Fix file encoding and configuration

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <p class="text-xl md:text-2xl mb-8 max-w-4xl mx-auto text-blue-100">
                     Clara AI synthesizes FDA, CMS, and clinical data in <span class="text-yellow-300 font-bold">127ms</span> 
                     to deliver instant drug intelligence, automate prior authorizations with <span class="text-green-300 font-bold">95% success</span>, 
-                    and optimize patient assistance programs — saving HCPs <span class="text-cyan-300 font-bold">3+ hours daily</span>
+                    and optimize patient assistance programs – saving HCPs <span class="text-cyan-300 font-bold">3+ hours daily</span>
                 </p>
 
                 <!-- Live Performance Metrics -->
@@ -293,7 +293,7 @@
                 </h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
                     Watch Clara synthesize data from 5+ authoritative sources, predict PA success, 
-                    and optimize patient assistance — all in under 200ms
+                    and optimize patient assistance – all in under 200ms
                 </p>
             </div>
 
@@ -1065,7 +1065,7 @@
                 <div>
                     <h4 class="font-semibold mb-4">Platform</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition">Clara AI</a></li>
+                        <li><a href="app.html" class="hover:text-white transition">Clara AI</a></li>
                         <li><a href="#" class="hover:text-white transition">API Documentation</a></li>
                         <li><a href="#" class="hover:text-white transition">Integrations</a></li>
                         <li><a href="#" class="hover:text-white transition">Security</a></li>
@@ -1075,10 +1075,10 @@
                 <div>
                     <h4 class="font-semibold mb-4">Company</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition">About</a></li>
-                        <li><a href="#" class="hover:text-white transition">Careers</a></li>
-                        <li><a href="#" class="hover:text-white transition">Press</a></li>
-                        <li><a href="#" class="hover:text-white transition">Investors</a></li>
+                        <li><a href="about.html" class="hover:text-white transition">About</a></li>
+                        <li><a href="careers.html" class="hover:text-white transition">Careers</a></li>
+                        <li><a href="press.html" class="hover:text-white transition">Press</a></li>
+                        <li><a href="clean.html" class="hover:text-white transition">Contact</a></li>
                     </ul>
                 </div>
                 
@@ -1376,7 +1376,7 @@
                         </div>
                         
                         <div class="bg-blue-50 rounded-lg p-4">
-                            <h4 class="font-bold text-blue-800 mb-2">📝 AI-Generated Medical Necessity:</h4>
+                            <h4 class="font-bold text-blue-800 mb-2">📋 AI-Generated Medical Necessity:</h4>
                             <div class="bg-white rounded p-3 text-sm font-mono text-gray-700 max-h-32 overflow-y-auto">
                                 Patient meets USPSTF Grade A recommendation criteria for HIV PrEP. 
                                 Descovy (TAF/FTC) is medically necessary due to superior renal and bone safety profile...
@@ -1656,7 +1656,7 @@
         }
 
         function openContactModal() {
-            alert('Schedule a demo: support@advocaremed.com');
+            window.location.href = 'clean.html';
         }
 
         function toggleVoiceInput() {
